kustomize/applications/pushgateway/deploy.yaml
---
# Source: prometheus/templates/pushgateway/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: "pushgateway"
    app: prometheus
    release: prometheus
    chart: prometheus-15.18.0
    heritage: Helm
  name: prometheus-pushgateway
  namespace: default
spec:
  selector:
    matchLabels:
      component: "pushgateway"
      app: prometheus
      release: prometheus
  replicas: 1
  template:
    metadata:
      labels:
        component: "pushgateway"
        app: prometheus
        release: prometheus
        chart: prometheus-15.18.0
        heritage: Helm
    spec:
      serviceAccountName: prometheus-pushgateway
      containers:
        - name: prometheus-pushgateway
          image: "prom/pushgateway:v1.4.3"
          imagePullPolicy: "IfNotPresent"
          securityContext:
            {}
          args:
          ports:
            - containerPort: 9091
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9091
            initialDelaySeconds: 10
            timeoutSeconds: 10
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9091
            initialDelaySeconds: 10
            timeoutSeconds: 10
          resources:
            {}
          volumeMounts:
            - name: storage-volume
              mountPath: "/data"
              subPath: ""
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
      volumes:
        - name: storage-volume
          persistentVolumeClaim:
            claimName: prometheus-pushgateway
