kustomize/applications/pushgateway/service.yaml
---
# Source: prometheus/templates/pushgateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/probe: pushgateway
  labels:
    component: "pushgateway"
    app: prometheus
    release: prometheus
    chart: prometheus-15.18.0
    heritage: Helm
  name: prometheus-pushgateway
  namespace: default
spec:
  ports:
    - name: http
      port: 9091
      protocol: TCP
      targetPort: 9091
  selector:
    component: "pushgateway"
    app: prometheus
    release: prometheus
  type: "ClusterIP"
